src/objects/Contract_NonRate_Based_Minimum_Guarantee__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_Guarantee__c</fullName>
        <label>Amount of Guarantee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis(Units or $)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract NonRate Based Minimum Guarantee</relationshipLabel>
        <relationshipName>Contract_NonRate_Based_Minimum_Guarantee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From_When__c</fullName>
        <label>From When</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_SA__c</fullName>
        <label>Meeting SA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Guarantee_requested__c</fullName>
        <label>Why is a Minimum Guarantee requested?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_L_Treatment__c</fullName>
        <label>P&amp;L Treatment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_When__c</fullName>
        <label>To When</label>
        <type>Date</type>
    </fields>
    <label>Contract NonRate Based Minimum Guarantee</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contract NonRate Based Minimum Guarantee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract NonRate Based Minimum Guarantee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>